# weather-app

./: .env  .env-example  .gitignore  getweather.py  pyproject.toml  requirements.txt  weather-app.py  weather.py  weatherapp.py  weatrher-app.py
